--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,420 @@
-.App {
-  text-align: center;
+
+
+/* Editando Navbar */
+
+
+.carrito{
+    justify-content:space-evenly;
+    align-items: center;
+    margin: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul{
+    gap: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navb{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.img{
+
+    width: 30px;
+    height: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo{
+    margin-left: 10px;
+}
+
+.links{
+    margin-top: 5px;
+   
+}
+
+@media screen and (max-width:480px) {
+    
+    .logo{
+        width: 70px;
+       
+    }
+    span{
+        
+        font-size: 0.8rem;
+
+    }
+
+}
+
+@media screen and (max-width:991px) {
+    
+    .links{
+        margin-top: 0;
+        padding: 20px;
+        
+        
+    }
+    .btn-close{
+        margin-top: 10px;
+        margin-bottom: 30px;
+        width: 5px;
+        height: 5px;
+    
+    }
+
+    .nav-link {
+        color: var(--VeryDarkBlue);
+        font-family: var(--font);
+        font-weight: 700;
+        margin-bottom: -20px;
+    }
+
+    .carrito{
+        gap: 20px;
+    }
+
+    
+   
+
+}
+
+
+/* fin del navbar */
+/* 
+Edicion de Galeria */
+
+.carousel-indicators{
+    position: relative;
+    display: flex;
+    flex-direction:row;
+    grid-row: 2/2;
+    justify-content: center;
+    align-self: center;
+    gap: 20px;
+}
+.carousel-inner{
+  
+    display: flex;
+    width: 100%;
+    grid-row: 1/2;
+    
+    
+}
+
+.carousel-control-prev, .carousel-control-next{
+    display: none;
+}
+
+@media screen and (max-width:990px) {
+    .carousel-indicators{
+        display: none;
+    }
+    .carousel-control-prev, .carousel-control-next{
+        display: block;
+    }
+    
+}
+
+
+.carousel{
+    width:50%;
+    max-width: 600px;
+    height: 100%;
+    position: none;
+    display: grid;
+    grid-template-columns:100%;
+    grid-template-rows: 400px 5%;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 60px;
+}
+
+
+#boton{
+    width: 100px;
+    height: 100px;
+    border-radius: 30px;
+}
+.slide{
+    position: none;
+} 
+
+
+
+/* .img1{
+    width: 100%;
+    height: 100%;
+} */
+
+
+/* modal  */
+
+.container-modal{
+    position: absolute;
+    background-color: rgba(0,0,0,0.4 );
+    width: 200vw;
+    height: 200vh;
+    top: 0;
+    left: 0;
+    z-index: 2000;
+    
+}
+
+.cerrar{display: none;}
+
+.imagen-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 700px;
+    gap: 20px;
+    position: absolute;
+    top: 100px;
+    left: 36%;
+}
+
+.imagenGrande img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.imagenGrande{
+    width: 700px;
+    height: 500px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botones{
+    position: absolute;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0 10px;
+}
+
+.botones img{
+    width: 30px;
+    height: 40px;
+}
+
+
+.imagenes img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.imagenes{
+    display: flex;
+    width: 700px;
+    height: 100px;
+    gap: 20px;
+
+}
+
+
+/* 
+fin de la galeria */
+/* 
+edicion de la seccion */
+
+
+.container-section{
+    padding: 30px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+h4{
+    color: var(--Orange);
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: -10px;
+}
+
+h1{
+    color: var(--VeryDarkBlue);
+    font-weight: 700;
+}
+
+.description{
+    color: var(--GrayishBlue);
+    font-weight: 400;
+}
+
+.price{
+    display: flex;
+    gap: 20px;
+    
+}
+
+
+
+/* .descuento{
+    background-color: var(--LightGrayishBlue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    width: 40px;
+    height: 220px;
+} */
+
+h2{
+    color: var(--VeryDarkBlue);
+    font-weight: 700;
+}
+
+.descuento p{
+    color: var(--Orange);
+    background-color: var(--LightGrayishBlue);
+    padding: 3px 10px;
+    font-weight: 700;
+    margin: 4px auto;
+    border-radius: 10px;
+}
+
+.desc{
+    color: var(--GrayishBlue);
+    text-decoration: line-through;
+    margin-top: -20px;
+    margin-bottom: 30px;
+}
+
+
+.add-cart{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    width: 100%;
+}
+
+@media screen and (max-width:991px) {
+
+    .add-cart{
+        grid-template-columns: 1fr;
+        grid-row: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .add-cart-btn{
+        width: 100%;
+    }
+
+    .cart{
+        margin-right: 0px;
+    }
+    .contador{
+        width: 100%;
+        justify-content: space-between;
+       
+    }
+
+    .contador p {
+        font-size: 2rem;
+    }
+
+    .add-cart-btn p{
+        font-size: 1.3rem;
+    }
+    
+}
+
+.contador{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--LightGrayishBlue);
+    padding: 10px;
+    height: 80px;
+    border-radius: 10px;
+}
+
+
+.sumayresta{
+    color: var(--Orange);
+    font-weight: 700;
+     font-size: 1.7rem;
+    padding: 0 15px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+
+
+.add-cart-btn{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    height: 80px;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--Orange);
+    color: white;
+    font-size: 1.2rem;
+}
+
+.add-cart-btn p{
+
+    margin: 10px auto;
+   
+}
+
+.cart{
+    margin: auto 9px;
+    margin-top: -7px; 
+}
+
+.contador-total{
+    margin-top: 18px;
+    font-size: 1.2rem;
+    font-weight: 700
+}
+
+/* 
+fin de la seccion */
+/* 
+seccion app */
+
+.container-gral{
+    display: flex;
+    max-width: 1100px;
+    gap:120px;
+    margin: 50px auto;
+    
+    
+}
+
+
+@media screen and (max-width:991px) {
+    .container-gral{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 0;
+    }
+    
 }
