--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+
+  @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family:var(--font) ;
+}
+:root {
+    /* ### Primary */
+
+--Orange: hsl(26, 100%, 55%);
+--PaleOrange: hsl(25, 100%, 94%);
+
+/* ### Neutral */
+
+--VeryDarkBlue: hsl(220, 13%, 13%);
+--DarkGrayishBlue: hsl(219, 9%, 45%);
+--GrayishBlue: hsl(220, 14%, 75%);
+--LightGrayishBlue: hsl(223, 64%, 98%);
+--White: hsl(0, 0%, 100%);
+/* - Black (with 75% opacity for lightbox background): hsl(0, 0%, 0%) */
+
+--font:  'Kumbh Sans';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
