--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     justify-content:space-evenly;
     align-items: center;
     margin: 10px;
+    position: relative;
 }
 
 ul{
@@ -34,6 +35,20 @@ ul{
 
 .logo{
     margin-left: 10px;
+}
+
+.usuario{
+    border: 2px solid  white;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover{
+        border: 2px solid orange;
+    }
+}
+
+.carrito-img{
+    cursor: pointer;
 }
 
 .links{
@@ -87,7 +102,83 @@ ul{
 
 }
 
+/* 
+carrito lleno */
+.sin-producto{
+    display: flex;
+    font-size: 1.1rem;
+    color: gray;
+    justify-content: center;
+    align-items: center;
 
+}
+.close-carrito{
+    display: none;
+    transition: all 5000ms ease-in-out;
+}
+.carrito-content{
+    display: flex;
+    flex-direction: column;
+    padding:20px;
+    position: absolute;
+    top: 70px;
+    right: 100px;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.4 );
+    gap: 15px;
+    background-color: white;
+    transition: all 5000ms ease-in-out;
+}
+
+
+.carrito-content h3{
+    font-size: 1rem;
+    font-weight: 700;
+}
+hr{
+    margin-top: 0;
+}
+.carrito-lleno{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.carrito-vacio{
+    display: none;
+}
+.buy{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    gap: 10px;
+}
+
+.titulo{
+    width: 100%;
+    font-size: 0.8rem;
+    height:40px;
+
+}
+
+
+.producto-seleccionado{
+    width: 45px;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.btn-buy{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--Orange);
+    font-family: var(--font);
+    color: white;
+}
 /* fin del navbar */
 /* 
 Edicion de Galeria */
@@ -161,8 +252,8 @@ Edicion de Galeria */
 .container-modal{
     position: absolute;
     background-color: rgba(0,0,0,0.4 );
-    width: 200vw;
-    height: 200vh;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
     z-index: 2000;
@@ -176,8 +267,8 @@ Edicion de Galeria */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 600px;
-    height: 700px;
+    width: 400px;
+    height:650px;
     gap: 20px;
     position: absolute;
     top: 100px;
@@ -191,7 +282,7 @@ Edicion de Galeria */
 }
 
 .imagenGrande{
-    width: 700px;
+    width: 600px;
     height: 500px;
     position: relative;
     display: flex;
@@ -222,10 +313,11 @@ Edicion de Galeria */
 
 .imagenes{
     display: flex;
-    width: 700px;
+   
+    width: 600px;
     height: 100px;
     gap: 20px;
-
+    
 }
 
 
