--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 }
 /* Editando Navbar */
 
-
 .carrito{
     justify-content:space-evenly;
     align-items: center;
@@ -12,10 +11,22 @@
     position: relative;
 }
 
+.navbar-toggler{
+    border: none;
+    
+}
+.navbar-toggler:focus{
+    box-shadow: none;
+}
+
+.cart-container{
+    position: relative;
+}
+
 .numero-cart{
     display: flex;
     position: absolute;
-    left: 65px;
+    left: 10px;
     top: -10px;
     background-color: var(--Orange);
     color: white;
@@ -86,12 +97,14 @@ ul{
 @media screen and (max-width:480px) {
     
     .logo{
-        width: 70px;
+        width: 120px;
+        height: 20px;
+        margin-bottom: 5px;
        
     }
     span{
         
-        font-size: 0.8rem;
+        font-size: 1rem;
 
     }
 
@@ -236,6 +249,56 @@ strong{
 /* fin del navbar */
 /* 
 Edicion de Galeria */
+.carousel-indicators [data-bs-target]{
+    opacity: 1;
+}
+
+.carousel-indicators .active{
+    margin-top: 8px;
+    border: 2px solid orange;
+    opacity: 0.5;
+}
+
+
+
+.carousel-control-next{
+    height: 40px;
+    width: 40px;
+    top: 50%;
+    background-color: white;
+    color: black;
+    border-radius: 50%;
+    right: 20px;
+    padding: auto;
+    margin: 1px auto;
+}
+
+.carousel-control-prev img{
+ width: 15px;
+ height: 15px;
+ margin: 0 3px 3px 0;
+ 
+}
+
+.carousel-control-next img{
+    width: 15px;
+    height: 15px;
+    margin: 0 0 3px 0;
+}
+.carousel-control-prev{
+    height: 40px;
+    width: 40px;
+    top: 50%;
+    left: 20px;
+    background-color: white;
+    color: black;
+    border-radius: 50%;
+    padding: auto;
+    margin: 1px auto;
+}
+
+
+
 
 .carousel-indicators{
     position: relative;
@@ -305,11 +368,20 @@ Edicion de Galeria */
     position: absolute;
     background-color: rgba(0,0,0,0.4 );
     width: 100vw;
-    height: 100vh;
+    height: 200vh;
     top: 0;
     left: 0;
     z-index: 2000;
     
+}
+
+.close{
+    position: absolute;
+    top: -30px;
+    right: -20%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
 }
 
 .cerrar{display: none;}
@@ -319,12 +391,14 @@ Edicion de Galeria */
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
     width: 400px;
     height:650px;
     gap: 20px;
     position: absolute;
-    top: 100px;
-    left: 36%;
+    top: 200px;
+    left: 35%;
+   
 }
 
 .imagenGrande img{
@@ -347,13 +421,16 @@ Edicion de Galeria */
     display: none;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 0 10px;
+    width: 105%;
+    
+   
 }
 
 .botones img{
-    width: 30px;
+    width: 40px;
     height: 40px;
+    background-color: var(--LightGrayishBlue);
+    padding: 12px;
 }
 
 
@@ -361,16 +438,24 @@ Edicion de Galeria */
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    cursor: pointer;
+}
+
+.activa:enabled{
+    border: 2px solid var(--Orange);
+    opacity: 0.6;
 }
 
 .imagenes{
     display: flex;
-   
-    width: 600px;
+    justify-content: center;
+    width: 400px;
     height: 100px;
     gap: 20px;
     
 }
+
+
 
 
 /* 
@@ -554,7 +639,18 @@ seccion app */
     .add-cart-btn p{
         font-size: 1.3rem;
     }
+/* 
+    modal */
     
+    .imagen-container{
+        width: 100%;
+        top: 120px;
+        left: 0;
+    }
+
+    .close{
+        right: 20%;
+    }
 }
 
 
@@ -580,6 +676,12 @@ seccion app */
     .carousel-control-prev, .carousel-control-next{
         display: block;
     }
+    .carousel{
+        display: flex;
+        margin-top: 0;
+        z-index: 0;
+        width: 100%;
+       }
     
 }
 
@@ -592,10 +694,56 @@ seccion app */
     grid-row: auto;
     z-index: 0;
    }
-   .carousel{
-    display: flex;
-    margin-top: 0;
-    z-index: 0;
-   }
- 
+  
+   .close{
+    right: 15%;
+}
+}
+
+@media screen and (max-width:600px) {
+
+    .carousel-inner{
+        
+        margin-top: -50px;
+        overflow: visible;
+        width: 100vw;
+    }
+
+    .carousel-item{
+        width: 100vw;
+    }
+    .carousel-item img{
+        
+        border-radius: 0;
+    }
+
+
+    .imagenGrande{
+        width: 100vw;
+        height: 70%;
+       
+    }
+
+
+    .close{
+        right: 5%;
+        top: 12px;
+    }
+    .botones img{
+        width: 25px;
+        height: 30px;
+    }
+
+    .imagenes{
+        width: 100%;
+        height: 70px;
+    }
+}
+
+@media screen and (max-width:480px) {
+
+    .carousel-control-prev, .carousel-control-next{
+       top: 45%;
+    }
+    
 }
